src/objects/Strategy__c.object
<CustomObject>
    <description>T-459059</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>T-464755</description>
        <inlineHelpText>Account associated with this strategy</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <infoMessage>This filter defaults to a HOUSEHOLD search remove the criteria filter to search for ORGANIZATIONS</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_Criteria__c</fullName>
        <description>T-469473</description>
        <formula>NOT(ISBLANK(TEXT(Prospect__r.rC_Bios__Preferred_Email__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the formula is TRUE, the Strategy record related to this contact can be submitted for approval.</inlineHelpText>
        <label>Approval Submission Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Plan__c</fullName>
        <defaultValue>&quot;Mail, Phone, In-Person Meetings&quot;</defaultValue>
        <description>T-464755</description>
        <inlineHelpText>Enter the basics of your communication plan</inlineHelpText>
        <label>Communication Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <description>S-340359</description>
        <inlineHelpText>What is your confidence in this proposal?</inlineHelpText>
        <label>Confidence</label>
        <picklist>
            <picklistValues>
                <fullName>Long-shot</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>50/50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thumbs-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TBD</description>
        <label>Contact2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategies2</relationshipLabel>
        <relationshipName>Strategies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Gift_Total__c</fullName>
        <description>Sum of all the related proposals - this amount will be the approved amount from the other team.</description>
        <label>Expected Gift Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <description>Overall goal of strategy</description>
        <inlineHelpText>Outline your: Strategy/goal/use case/plan/Communication methodology/events/emails http://merskyjaffe.com/general-fundraising/develop-strategic-solicitation-strategy/</inlineHelpText>
        <label>Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>S-371633</description>
        <inlineHelpText>Link to ENGAGEMENT type strategy</inlineHelpText>
        <label>Parent Strategy</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Engagement strategies can be parents of solicitation</errorMessage>
            <filterItems>
                <field>Strategy__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Engagement</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Solicitation</value>
            </filterItems>
            <infoMessage>Enagement Strategies can have multiple child solicitation strategies.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Strategy__c</referenceTo>
        <relationshipLabel>Solicitation Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <defaultValue>&quot;Outline your: Strategy/goal/use case/plan/Communication methodology/events/emails&quot;</defaultValue>
        <description>What are the main steps to accomplishing the strategy</description>
        <inlineHelpText>What are the main steps to accomplishing the strategy</inlineHelpText>
        <label>Plan</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Ask_Range__c</fullName>
        <description>T-464755</description>
        <inlineHelpText>Select the most likely range for the total strategy ask.</inlineHelpText>
        <label>Proposed Ask Range</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;50,000</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>50,000 - 99,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,000 - 999,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,000,000 - 4,999,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000,000 - 9,999,999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;10,000,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>T-459059 POC for strategy lifecycle</description>
        <inlineHelpText>Set the record status to correspond to the selected record type. Status values depend on record type.
Example: Engagement record &quot;IN PROGRESS&quot; or Solicitation record &quot;PENDING APPROVAL&quot;</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Team Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Executive Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stewardship_Plan__c</fullName>
        <description>T-464755</description>
        <inlineHelpText>Outline the continuing relationship building activities for this prospect</inlineHelpText>
        <label>Stewardship Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>T-470421 - used for dynamic team approval</description>
        <label>Team Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Strategies to Approve</relationshipLabel>
        <relationshipName>StrategiesUser1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>T-470421</description>
        <label>Team Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Strategies to Approve</relationshipLabel>
        <relationshipName>StrategiesUser2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>T-470421 Define relative approvers for dynamic approval</description>
        <label>Team Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Engagement_Strategies</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Prospect__c</columns>
        <columns>Proposed_Ask_Range__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Strategy__c.Engagement</value>
        </filters>
        <label>Engagement Strategies</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Solicitation_Strategies</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Prospect__c</columns>
        <columns>Proposed_Ask_Range__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Strategy__c.Solicitation</value>
        </filters>
        <label>Solicitation Strategies</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <recordTypes>
        <fullName>Engagement</fullName>
        <active>true</active>
        <description>Preliminary strategy for the prospect</description>
        <label>Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solicitation</fullName>
        <active>true</active>
        <description>Define the overall solicitation strategy that will include proposals</description>
        <label>Solicitation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validate_Manual_Strategy_Status_Changes</fullName>
        <active>true</active>
        <description>T-470420 Prevent user from setting invalid status; must be in sync with approval</description>
        <errorConditionFormula>OR(
(ISPICKVAL(Status__c,&quot;In Solicitation&quot;) &amp;&amp; TEXT(PRIORVALUE(Status__c)) &lt;&gt; &quot;Approved&quot;),
(ISPICKVAL(Status__c,&quot;Completed&quot;) &amp;&amp; TEXT(PRIORVALUE(Status__c)) &lt;&gt; &quot;In Solicitation&quot;)
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Invalid Status selected</errorMessage>
    </validationRules>
</CustomObject>